# bridge

./: .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  Pipfile  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yaml
bridge/: __init__.py  azure_sso.py  server.py  settings.py
bridge/templates/: auth_error.html  base.html  index.html  upload.html
